# DigitalSeance

./: .2ms.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaksignore  .kics.yaml  .lighthouserc.json  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  SACP-Exec-Summary.md  SECURITY.md  SYSREP.md  docker-compose.yml  pyproject.toml
.claude/hooks/: ruff-on-save.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: build-image.yml  cleanup-packages.yml  codeql.yml  test.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  sacp-data-security-policy.md
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial_schema.py  002_add_token_expiry.py  003_increase_turn_timeout.py  004_convergence_log_composite_pk.py  005_session_review_gate_pause_scope.py  006_security_events.py  007_audit_log_survives_deletion.py  008_security_events_instrumentation.py  009_auth_token_lookup_index.py  010_density_signal.py  011_session_length_cap.py  012_active_phase_started_at.py  013_021_response_shaping.py  013_audit_log_session_timestamp_index.py  014_audit_log_session_timestamp_index.py  015_user_accounts.py  016_account_email_hash.py  017_detection_events.py  018_compression_log.py  019_facilitator_notes.py  021_participant_standby_modes.py  022_oauth_state_tables.py  023_circuit_breaker_audit.py  024_capcom_routing_scope.py  025_auth_token_lookup_required.py  026_grant_least_privilege.py
docs/: AI_attack_surface_analysis_for_SACP_orchestrator.md  api-versioning.md  audit-registry-workflow.md  compliance-mapping.md  cross-spec-integration.md  eight-hard-problems.md  env-vars.md  error-codes.md  glossary.md  metrics.md  operational-runbook.md  participant-onboarding-macos.md  participant-onboarding-windows.md  participant-onboarding.md  pattern-list-update-workflow.md  phase2-test-playbook.md  provider-compatibility-matrix.md  red-team-runbook.md  retention.md  sacp-communication-topologies.md  sacp-design.md  sacp-shakedown-threat-model-session.md  sacp-system-prompts.md  sacp-use-cases-and-topologies.md  sacp-use-cases.md  state-machines.md  testing-runbook.md  threat-model-review-process.md  user-guide.md  ws-events.md
docs/adr/: 0001-fire-and-forget-summarization.md
docs/runbooks/: auth-token-lookup-finalization.md  auth-token-lookup-key-rotation.md  db-role-bootstrap.md
docs/security/: local-model-deployment.md
docs/shakedowns/: README.md
docs/traceability/: fr-to-test.md
frontend/: app.jsx  audit_filters.js  audit_labels.js  cap_config.js  cap_disambiguation.js  default_names.js  detection_event_taxonomy.js  detection_history_filters.js  diff_engine.js  index.html  rejoin_indicator.js  scratch_notes.js  standby_ui.js  style.css  text_helpers.js  time_format.js
references/: 800-53B-baselines.md  ai-100-2-aml-taxonomy.md  coding-standards.md  csf-2.0-framework.md  dod-secure-dev.md  osint-sources.md  sp-800-181-nice.md
references/800-53/: AC.md  AT.md  AU.md  CA.md  CM.md  CP.md  IA.md  IR.md  MA.md  MP.md  PE.md  PL.md  PM.md  PS.md  PT.md  RA.md  SA.md  SC.md  SI.md  SR.md
scripts/: check_026_v18_traceability.py  check_audit_label_parity.py  check_detection_taxonomy_parity.py  check_doc_deliverables.py  check_env_vars.py  check_frontend_syntax.mjs  check_image_contents.py  check_no_placeholder_secrets.py  check_schema_mirror.py  check_time_format_parity.py  check_traceability.py  compute_mock_fixture_hash.py  generate_sri_hashes.sh  lint_code_standards.py  package-lock.json  package.json  purge_security_events.py  scan_staged_secrets.py  scratch_retention_sweep.py
scripts/db-init/: 00-create-sacp-roles.sh
specs/001-core-data-model/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-participant-auth/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-turn-loop-engine/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-convergence-cadence/: plan.md  spec.md  tasks.md
specs/005-summarization-checkpoints/: plan.md  spec.md  tasks.md
specs/006-mcp-server/: plan.md  spec.md  tasks.md
specs/007-ai-security-pipeline/: plan.md  spec.md  tasks.md
specs/008-prompts-security-wiring/: plan.md  spec.md  tasks.md
specs/009-rate-limiting/: plan.md  spec.md  tasks.md
specs/010-debug-export/: plan.md  spec.md  tasks.md
specs/011-web-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-audit-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-high-traffic-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  config.py  run_apps.py
src/accounts/: codes.py  (+5 more)
tests/: conftest.py  test_001_testability.py  test_002_testability.py  test_004_testability.py  test_005_testability.py  test_006_mcp_testability.py  test_007_security_pipeline_testability.py  test_008_testability.py  test_009_testability.py  test_010_testability.py  test_011_testability.py  test_013_batching.py  test_013_convergence_override.py  test_013_loop_integration.py  test_013_observer_downgrade.py  test_013_regression_phase2.py  test_014_advisory_mode.py  test_014_auto_apply.py  test_014_dma_observation.py  test_014_regression_spec013_only.py  test_014_signal_independence.py  test_014_throttle_and_unavailability.py  test_014_validators.py  test_015_audit_metrics.py  test_015_circuit_breaker.py  test_015_probe_recovery.py  test_015_validators.py  test_016_metrics_counters.py  test_016_metrics_endpoint.py  test_016_session_eviction.py  test_017_loop_integration.py  test_017_tool_freshness.py  test_018_discovery.py  test_018_partition.py  test_018_phase1_hooks.py  test_018_validators.py  test_019_middleware_order.py  test_019_pipeline_failure.py  test_019_us1_bcrypt_flood.py  test_019_us2_exempt_and_layers.py  (+225 more)
wiki/: Concepts.md  Home.md  Run-and-test.md  Security.md  Web-UI.md  _Sidebar.md
(+501 files in other folders)
