[project]
name = "sacp"
version = "0.1.0"
description = "Sovereign AI Collaboration Protocol"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "cryptography>=47.0.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "uvicorn>=0.34.0",
    "litellm>=1.83.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "psycopg2-binary>=2.9.12",
    "itsdangerous>=2.2.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.4",
    "bandit>=1.8.3",
    "pre-commit>=4.0.0",
]
e2e = [
    "pytest-playwright>=0.7.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires real Postgres + orchestrator + LiteLLM; runs in a separate CI tier per spec 012 FR-015",
    "e2e: end-to-end browser tests via Playwright (skipped without [e2e] extras)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101", "B008"]  # S101: assert in tests, B008: FastAPI Depends()

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = []
