[project]
name = "sacp"
version = "0.1.0"
description = "Sovereign AI Collaboration Protocol"
license = "AGPL-3.0-or-later"
authors = [{ name = "Patrick H Pinder" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "cryptography>=47.0.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "uvicorn>=0.34.0",
    # litellm 1.83.8+ dropped Python 3.14 support (Requires-Python <3.14).
    # Project pins Python 3.14.4 (Constitution §6.8 slim-bookworm), so the
    # only installable 3.14-compatible release is 1.83.7. Upper bound is
    # explicit to keep Dependabot from re-bumping until upstream restores
    # 3.14 in 1.83.x or a 1.84+ line. Re-evaluate on every litellm release.
    #
    # Two known advisories on 1.83.7 are risk-accepted on the same grounds
    # — both target the LiteLLM proxy server's authenticated guardrails
    # surface, which SACP never starts. LiteLLM is consumed as an SDK only
    # from src/api_bridge/litellm/; no /guardrails/* endpoints are bound.
    # See .trivyignore for the per-CVE rationale Trivy reads at scan time.
    #
    #   - GHSA-wxxx-gvqv-xp7p (custom-code guardrail sandbox escape, fixed
    #     1.83.11). Proxy /guardrails/test_custom_code endpoint.
    #   - CVE-2026-40217 (arbitrary code execution via bytecode rewriting,
    #     fixed 1.83.10). Same /guardrails/test_custom_code endpoint;
    #     x41-dsec advisory confirms SDK-only consumers are not exposed.
    "litellm>=1.83.0,<1.83.8",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "psycopg2-binary>=2.9.12",
    "itsdangerous>=2.2.0",
    "websockets>=13.0",
    # Spec 023 user-accounts FR-003: argon2id password hashing via the
    # OWASP-recommended Python implementation. Pinned per Constitution
    # §6.3; the wrapping module src/accounts/hashing.py owns the only
    # call sites so a future swap stays internal-architecture.
    "argon2-cffi>=25.1.0,<26.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.4",
    "bandit>=1.8.3",
    "pre-commit>=4.0.0",
]
e2e = [
    "pytest-playwright>=0.7.2",
]
# Spec 026 Phase 2 — Layer 4 hard compression. Optional because the
# bundle pulls ~2 GB of transitive deps (`transformers` + `accelerate`
# + `nltk` + `torch`). Operators opt in only when activating Layer 4
# via SACP_COMPRESSION_PHASE2_ENABLED=true +
# SACP_COMPRESSION_DEFAULT_COMPRESSOR=llmlingua2_mbert.
#
# Pinned per Constitution §6.3 — `llmlingua` 0.2.x is the stable line
# carrying the LLMLingua-2 mBERT integration; upper bound prevents an
# automatic bump into 0.3.x where the `compress_prompt` API contract
# may break. Re-evaluate the bound when 0.3 lines stabilise.
compression-phase2 = [
    "llmlingua>=0.2.2,<0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires real Postgres + orchestrator + LiteLLM; runs in a separate CI tier per spec 012 FR-015",
    "e2e: end-to-end browser tests via Playwright (skipped without [e2e] extras)",
    "no_adapter_autoinit: skip the spec 020 conftest auto-init for tests that drive `initialize_adapter()` themselves",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101", "B008"]  # S101: assert in tests, B008: FastAPI Depends()

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
